--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+# Custom dependencies
+requests-toolbelt==1.0.0
+runpod==1.6.2
+
 torchsde==0.2.5
 einops==0.4.1
 transformers==4.30.2
@@ -26,3 +30,17 @@ sqlalchemy
 packaging
 rich
 chardet
+
+# Faceswap
+addict==2.4.0
+future==0.18.3
+lmdb==1.4.1
+numpy==1.26.2
+opencv-python==4.8.1.78
+requests==2.31.0
+scikit-image==0.22.0
+tb-nightly
+yapf==0.40.2
+lpips==0.1.4
+insightface>=0.7.3
+onnxruntime-gpu==1.16.3
