--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@
 requests-toolbelt==1.0.0
 runpod==1.6.2
 
-torchsde==0.2.5
+# Pulled from https://github.com/konieshadow/Fooocus-API/blob/main/requirements.txt
+torchsde==0.2.6
 einops==0.4.1
 transformers==4.30.2
 safetensors==0.3.1
@@ -35,7 +36,6 @@ chardet
 addict==2.4.0
 future==0.18.3
 lmdb==1.4.1
-numpy==1.26.2
 opencv-python==4.8.1.78
 requests==2.31.0
 scikit-image==0.22.0
